# Iman-j

./: .env  .gitignore  README.md  a.py  bot.service  config_loader.py  database.db  fastapi.service  main.py  pyproject.toml  pytest.ini  setup.sh  stupe.sh
api/: app.py  fetch.py  mock_api.py
api/v1/: data_models.py  route_utilities.py  routes.py
bot/: bot.py  bot_utilities.py  config_loader.py
bot/templats/: admin.py  base.py
database/: db.py  models.py
persian_nlp_tools/: persian_text_summarizer.py
scraper/: converter.py  data_parser.py  scraper.py  scraper_utilities.py
tests/: conftest.py  test_movie.py  test_user.py
