[project]
name = "iman-j-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.1",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-telegram-bot>=22.5",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.27",
]
